Metodos Controlador terminados , Postman done